--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # data\artifects\PyICU-2.9-cp38-cp38-win_amd64.whl
 # data\artifects\pycld2-0.41-cp38-cp38-win_amd64.whl
 # data\artifects\fasttext-0.9.2-cp38-cp38-win_amd64.whl
-wheel
-git+https://github.com/aboSamoor/polyglot@master
+# wheel
+# git+https://github.com/aboSamoor/polyglot@master
+PyICU-2.9-cp38-cp38-win_amd64.whl
