--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["freemt"]
 [tool.poetry.dependencies]
 python = "^3.8"
 six = "^1.16.0"
+Morfessor = "^2.0.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
